# serializer version: 1
# name: TestSystemClient.test_get_device_status_parses_additional_device_variants[rut241]
  dict({
    'board': dict({
      'hwinfo': dict({
        '2_5_gigabit_port': False,
        'at_sim': False,
        'bluetooth': False,
        'console': False,
        'dsa': False,
        'dual_band_ssid': False,
        'dual_modem': False,
        'dual_sim': False,
        'esim': False,
        'ethernet': True,
        'gigabit_port': False,
        'gps': False,
        'hw_nat': False,
        'ios': True,
        'micro_usb': False,
        'mobile': True,
        'nat_offloading': True,
        'poe': False,
        'port_link': True,
        'rs232': False,
        'rs485': False,
        'sd_card': False,
        'sfp_port': False,
        'soft_port_mirror': False,
        'usb': False,
        'wifi': True,
        'wps': False,
      }),
      'model': dict({
        'id': 'teltonika,rut2m',
        'name': 'Teltonika RUT2M',
        'platform': 'RUT2M',
      }),
      'modems': list([
        dict({
          'band_list': list([
            'GSM_900',
            'GSM_1800',
            'WCDMA_850',
            'WCDMA_900',
            'WCDMA_2100',
            'LTE_B1',
            'LTE_B3',
            'LTE_B5',
            'LTE_B7',
            'LTE_B8',
            'LTE_B20',
            'LTE_B40',
          ]),
          'boudrate': '115200',
          'builtin': True,
          'control': '2',
          'csd': False,
          'desc': 'MeigLink SLM750',
          'dhcp_filter': False,
          'dynamic_mtu': True,
          'gps': '3',
          'id': '1-1',
          'ipv6': True,
          'modem_func_id': 2,
          'multi_apn': True,
          'num': '1',
          'operator_scan': True,
          'primary': True,
          'product': 'f601',
          'revision': 'SLM750-V_4.57.20_EQ101',
          'simcount': 1,
          'stop_bits': '8',
          'type': 'gobinet',
          'vendor': '05c6',
          'volte': True,
        }),
      ]),
      'network': dict({
        'lan': dict({
          'default_ip': '192.168.1.1',
          'device': 'eth0.1',
          'proto': 'static',
        }),
        'wan': dict({
          'device': 'eth0.2',
          'proto': 'dhcp',
        }),
      }),
      'network_options': dict({
        'max_mtu': 1500,
        'readonly_vlans': 2,
        'vlans': 16,
      }),
      'switch': dict({
        'switch0': dict({
          'enable': True,
          'ports': list([
            dict({
              'num': 1,
              'role': 'lan',
            }),
            dict({
              'index': 2,
              'num': 0,
              'role': 'wan',
            }),
            dict({
              'device': 'eth0',
              'need_tag': False,
              'num': 6,
              'want_untag': False,
            }),
          ]),
          'reset': True,
          'roles': list([
            dict({
              'device': 'eth0.1',
              'ports': '1 6t',
              'role': 'lan',
            }),
            dict({
              'device': 'eth0.2',
              'ports': '0 6t',
              'role': 'wan',
            }),
          ]),
        }),
      }),
    }),
    'features': dict({
      'ipv6': True,
    }),
    'mnfinfo': dict({
      'batch': '0021',
      'blver': '4.2.0',
      'hwver': '0003',
      'mac': 'xx',
      'macEth': '2097271BECC3',
      'name': 'RUT24101XXXX',
      'serial': 'xx',
    }),
    'static': dict({
      'board_name': 'teltonika,rut2m',
      'cpu_count': 1,
      'device_name': 'RUT241',
      'fw_build_date': '2026-02-06 11:48:17',
      'fw_version': 'RUT2M_R_00.07.20.5',
      'hostname': 'RUT241',
      'kernel': '5.15.196',
      'model': 'Teltonika RUT2M',
      'release': dict({
        'description': 'OpenWrt 21.02.0 r16279-5cc0535800',
        'distribution': 'OpenWrt',
        'revision': 'r16279-5cc0535800',
        'target': 'ramips/mt76x8',
        'version': '21.02.0',
      }),
      'system': 'MediaTek MT7628AN ver:1 eco:2',
    }),
  })
# ---
# name: TestSystemClient.test_get_device_status_parses_additional_device_variants[rut950]
  dict({
    'board': dict({
      'hwinfo': dict({
        '2_5_gigabit_port': False,
        'at_sim': False,
        'bluetooth': False,
        'console': False,
        'dsa': False,
        'dual_band_ssid': False,
        'dual_modem': False,
        'dual_sim': True,
        'ethernet': True,
        'gigabit_port': False,
        'gps': False,
        'hw_nat': False,
        'ios': True,
        'micro_usb': False,
        'mobile': True,
        'multi_tag': False,
        'nat_offloading': True,
        'poe': False,
        'port_link': False,
        'rs232': False,
        'rs485': False,
        'sd_card': False,
        'sfp_port': False,
        'sfp_switch': False,
        'soft_port_mirror': False,
        'sw_rst_on_init': False,
        'usb': False,
        'vcert': False,
        'wifi': True,
        'wps': False,
      }),
      'model': dict({
        'id': 'teltonika,rut9xx',
        'name': 'Teltonika RUT9XX',
        'platform': 'RUT9',
      }),
      'modems': list([
        dict({
          'band_list': list([
            'GSM_850',
            'GSM_900',
            'GSM_1800',
            'GSM_1900',
            'WCDMA_850',
            'WCDMA_900',
            'WCDMA_1900',
            'WCDMA_2100',
            'LTE_B1',
            'LTE_B2',
            'LTE_B3',
            'LTE_B4',
            'LTE_B5',
            'LTE_B7',
            'LTE_B8',
            'LTE_B28',
            'LTE_B40',
          ]),
          'boudrate': '115200',
          'builtin': True,
          'control': '2',
          'csd': False,
          'desc': 'Quectel EC25',
          'dhcp_filter': True,
          'dynamic_mtu': True,
          'gps': '1',
          'id': '1-1',
          'ipv6': True,
          'modem_func_id': 2,
          'multi_apn': True,
          'num': '1',
          'operator_scan': True,
          'primary': True,
          'product': '0125',
          'revision': 'EC25AUFAR06A12M4G_01.001.01.001',
          'simcount': 2,
          'stop_bits': '8',
          'type': 'gobinet',
          'vendor': '2c7c',
          'volte': True,
        }),
      ]),
      'network': dict({
        'lan': dict({
          'default_ip': '192.168.1.1',
          'device': 'eth0.1',
          'proto': 'static',
        }),
        'wan': dict({
          'device': 'eth1',
          'proto': 'dhcp',
        }),
      }),
      'network_options': dict({
        'max_mtu': 1500,
        'readonly_vlans': 1,
        'vlans': 15,
      }),
      'switch': dict({
        'switch0': dict({
          'enable': True,
          'ports': list([
            dict({
              'device': 'eth0',
              'need_tag': False,
              'num': 0,
              'want_untag': False,
            }),
            dict({
              'index': 3,
              'num': 2,
              'role': 'lan',
            }),
            dict({
              'index': 2,
              'num': 3,
              'role': 'lan',
            }),
            dict({
              'index': 1,
              'num': 4,
              'role': 'lan',
            }),
          ]),
          'reset': True,
          'roles': list([
            dict({
              'device': 'eth0.1',
              'ports': '2 3 4 0t',
              'role': 'lan',
            }),
          ]),
        }),
      }),
    }),
    'features': dict({
      'ipv6': True,
    }),
    'mnfinfo': dict({
      'batch': '0135',
      'blver': '4.0.8',
      'hwver': '2222',
      'mac': '001E42AAFF01',
      'macEth': '001E42AAFF02',
      'name': 'RUT950TESTXXXX',
      'serial': '0000009501',
    }),
    'static': dict({
      'board_name': 'teltonika,rut9xx',
      'cpu_count': 1,
      'device_name': 'rut950-test',
      'fw_build_date': '2025-09-19 15:37:10',
      'fw_version': 'RUT9_R_00.07.06.20',
      'hostname': 'rut950-test',
      'kernel': '5.4.291',
      'model': 'Teltonika RUT9XX',
      'release': dict({
        'description': 'OpenWrt 21.02.0 r16279-5cc0535800',
        'distribution': 'OpenWrt',
        'revision': 'r16279-5cc0535800',
        'target': 'ath79/generic',
        'version': '21.02.0',
      }),
      'system': 'Atheros AR9344 rev 2',
    }),
  })
# ---
# name: TestSystemClient.test_get_device_status_parses_additional_device_variants[trb140]
  dict({
    'board': dict({
      'hwinfo': dict({
        '2_5_gigabit_port': False,
        'at_sim': False,
        'bluetooth': False,
        'console': False,
        'dsa': False,
        'dual_band_ssid': False,
        'dual_modem': False,
        'dual_sim': False,
        'esim': False,
        'ethernet': True,
        'gigabit_port': True,
        'gps': False,
        'hw_nat': False,
        'ios': True,
        'micro_usb': True,
        'mobile': True,
        'nat_offloading': False,
        'poe': False,
        'port_link': True,
        'rs232': False,
        'rs485': False,
        'sd_card': False,
        'sfp_port': False,
        'soft_port_mirror': False,
        'usb': False,
        'wifi': False,
        'wps': False,
      }),
      'model': dict({
        'id': 'teltonika,trb14x',
        'name': 'Teltonika TRB14X',
        'platform': 'TRB1',
      }),
      'modems': list([
        dict({
          'band_list': list([
            'GSM_900',
            'GSM_1800',
            'WCDMA_900',
            'WCDMA_2100',
            'LTE_B1',
            'LTE_B3',
            'LTE_B7',
            'LTE_B8',
            'LTE_B20',
            'LTE_B28',
            'LTE_B38',
            'LTE_B40',
            'LTE_B41',
          ]),
          'boudrate': '115200',
          'builtin': True,
          'control': '2',
          'csd': True,
          'desc': 'Quectel EC25/EG25',
          'dhcp_filter': True,
          'dynamic_mtu': True,
          'gps': '1',
          'id': '3-1',
          'ipv6': True,
          'modem_func_id': 0,
          'multi_apn': False,
          'num': '1',
          'operator_scan': True,
          'primary': True,
          'product': '0125',
          'revision': 'EC25EUGAR06A05M4G_BETA1108_01.005.00.000',
          'simcount': 1,
          'stop_bits': '8',
          'type': 'gobinet',
          'vendor': '2c7c',
          'volte': True,
        }),
      ]),
      'network': dict({
        'lan': dict({
          'default_ip': '192.168.2.1',
          'proto': 'static',
        }),
      }),
      'network_options': dict({
        'max_mtu': 1500,
        'vlans': 4094,
      }),
    }),
    'features': dict({
      'ipv6': True,
    }),
    'mnfinfo': dict({
      'batch': '056',
      'hwver': '0009',
      'mac': '001E42AACC01',
      'macEth': '001E42AACC02',
      'name': 'TRB140TESTXXXX',
      'serial': '0000001401',
    }),
    'static': dict({
      'board_name': 'teltonika,trb14x',
      'cpu_count': 1,
      'device_name': 'TRB140',
      'fw_build_date': '2026-02-25 15:17:38',
      'fw_version': 'TRB1_R_00.07.21.1',
      'hostname': 'trb140-test.local',
      'kernel': '5.4.302',
      'model': 'Teltonika TRB14X',
      'release': dict({
        'description': 'OpenWrt 21.02.0 r16279-5cc0535800',
        'distribution': 'OpenWrt',
        'revision': 'r16279-5cc0535800',
        'target': 'mdm9x07/generic',
        'version': '21.02.0',
      }),
      'system': 'ARMv7 Processor rev 5 (v7l)',
    }),
  })
# ---
# name: TestSystemClient.test_get_device_status_parses_additional_device_variants[trb500]
  dict({
    'board': dict({
      'hwinfo': dict({
        '2_5_gigabit_port': False,
        'at_sim': False,
        'bluetooth': False,
        'console': False,
        'dsa': False,
        'dual_band_ssid': False,
        'dual_modem': False,
        'dual_sim': False,
        'esim': False,
        'ethernet': True,
        'gigabit_port': True,
        'gps': False,
        'hw_nat': False,
        'ios': True,
        'micro_usb': True,
        'mobile': True,
        'nat_offloading': False,
        'poe': False,
        'port_link': True,
        'rs232': False,
        'rs485': False,
        'sd_card': False,
        'sfp_port': False,
        'soft_port_mirror': False,
        'usb': False,
        'wifi': False,
        'wps': False,
      }),
      'model': dict({
        'id': 'teltonika,trb5xx',
        'name': 'Teltonika TRB5XX',
        'platform': 'TRB500',
      }),
      'modems': list([
        dict({
          'band_list': list([
            'WCDMA_850',
            'WCDMA_900',
            'WCDMA_2100',
            'LTE_B1',
            'LTE_B3',
            'LTE_B5',
            'LTE_B7',
            'LTE_B8',
            'LTE_B20',
            'LTE_B28',
            'LTE_B32',
            'LTE_B38',
            'LTE_B40',
            'LTE_B41',
            'LTE_B42',
            'LTE_B43',
            'NSA_5G_N1',
            'NSA_5G_N3',
            'NSA_5G_N5',
            'NSA_5G_N7',
            'NSA_5G_N8',
            'NSA_5G_N20',
            'NSA_5G_N28',
            'NSA_5G_N38',
            'NSA_5G_N40',
            'NSA_5G_N41',
            'NSA_5G_N77',
            'NSA_5G_N78',
            '5G_N1',
            '5G_N3',
            '5G_N5',
            '5G_N7',
            '5G_N8',
            '5G_N20',
            '5G_N28',
            '5G_N38',
            '5G_N40',
            '5G_N41',
            '5G_N77',
            '5G_N78',
          ]),
          'boudrate': '115200',
          'builtin': True,
          'control': '2',
          'csd': False,
          'desc': 'Quectel RG50X',
          'dhcp_filter': True,
          'dynamic_mtu': True,
          'gps': '1',
          'id': '3-1',
          'ipv6': True,
          'modem_func_id': 2,
          'multi_apn': False,
          'num': '1',
          'operator_scan': True,
          'primary': True,
          'product': '0800',
          'revision': 'RG501QEUAAR12A07M4G_04.001.04.001',
          'simcount': 1,
          'stop_bits': '8',
          'type': 'gobinet',
          'vendor': '2c7c',
          'volte': True,
        }),
      ]),
      'network': dict({
        'lan': dict({
          'default_ip': '192.168.2.1',
          'proto': 'static',
        }),
      }),
      'network_options': dict({
        'max_mtu': 1500,
        'vlans': 4094,
      }),
    }),
    'features': dict({
      'ipv6': True,
    }),
    'mnfinfo': dict({
      'batch': '0008',
      'hwver': '0004',
      'mac': '209727AABB01',
      'macEth': '209727AABB02',
      'name': 'TRB500TESTXXXX',
      'serial': '0000005001',
    }),
    'static': dict({
      'board_name': 'teltonika,trb5xx',
      'cpu_count': 1,
      'device_name': 'trb500-test',
      'fw_build_date': '2026-01-21 14:03:46',
      'fw_version': 'TRB500_R_00.07.20.3',
      'hostname': 'trb500-test.local',
      'kernel': '4.14.336',
      'model': 'Teltonika TRB5XX',
      'release': dict({
        'description': 'OpenWrt 21.02.0 r16279-5cc0535800',
        'distribution': 'OpenWrt',
        'revision': 'r16279-5cc0535800',
        'target': 'sdxprairie/generic',
        'version': '21.02.0',
      }),
      'system': 'ARMv7 Processor rev 5 (v7l)',
    }),
  })
# ---
# name: TestSystemClient.test_get_device_status_parses_fixture
  dict({
    'board': dict({
      'hwinfo': dict({
        '2_5_gigabit_port': False,
        'at_sim': True,
        'bluetooth': False,
        'console': False,
        'dsa': False,
        'dual_band_ssid': True,
        'dual_modem': False,
        'dual_sim': True,
        'esim': False,
        'ethernet': True,
        'gigabit_port': True,
        'gps': True,
        'hw_nat': False,
        'ios': True,
        'micro_usb': False,
        'mobile': True,
        'multi_tag': True,
        'nat_offloading': True,
        'poe': False,
        'port_link': True,
        'rs232': False,
        'rs485': False,
        'sd_card': False,
        'sfp_port': False,
        'soft_port_mirror': False,
        'usb': True,
        'wifi': True,
        'wps': False,
      }),
      'model': dict({
        'id': 'teltonika,rutx',
        'name': 'RUTX50',
        'platform': 'RUTX',
      }),
      'modems': list([
        dict({
          'band_list': list([
            'WCDMA_850',
            'WCDMA_900',
            'WCDMA_2100',
            'LTE_B1',
            'LTE_B3',
            'LTE_B5',
            'LTE_B7',
            'LTE_B8',
            'LTE_B20',
            'LTE_B28',
            'LTE_B32',
            'LTE_B38',
            'LTE_B40',
            'LTE_B41',
            'LTE_B42',
            'LTE_B43',
            'NSA_5G_N1',
            'NSA_5G_N3',
            'NSA_5G_N5',
            'NSA_5G_N7',
            'NSA_5G_N8',
            'NSA_5G_N20',
            'NSA_5G_N28',
            'NSA_5G_N38',
            'NSA_5G_N40',
            'NSA_5G_N41',
            'NSA_5G_N77',
            'NSA_5G_N78',
            '5G_N1',
            '5G_N3',
            '5G_N5',
            '5G_N7',
            '5G_N8',
            '5G_N20',
            '5G_N28',
            '5G_N38',
            '5G_N40',
            '5G_N41',
            '5G_N77',
            '5G_N78',
          ]),
          'boudrate': '115200',
          'builtin': True,
          'control': '2',
          'csd': False,
          'desc': 'Quectel RG50X',
          'dhcp_filter': True,
          'dynamic_mtu': True,
          'gps': '1',
          'gps_out': True,
          'id': '2-1',
          'ipv6': True,
          'modem_func_id': 2,
          'multi_apn': True,
          'num': '1',
          'operator_scan': True,
          'primary': True,
          'product': '0800',
          'revision': 'RG501QEUAAR12A11M4G_04.202.04.202',
          'simcount': 2,
          'stop_bits': '8',
          'type': 'gobinet',
          'vendor': '2c7c',
          'volte': True,
        }),
      ]),
      'network': dict({
        'lan': dict({
          'default_ip': '192.168.1.1',
          'device': 'eth0',
          'proto': 'static',
        }),
        'wan': dict({
          'device': 'eth1',
          'proto': 'dhcp',
        }),
      }),
      'network_options': dict({
        'max_mtu': 9000,
        'readonly_vlans': 2,
        'vlans': 128,
      }),
      'switch': dict({
        'switch0': dict({
          'enable': True,
          'ports': list([
            dict({
              'device': 'eth0',
              'need_tag': False,
              'num': 0,
              'want_untag': True,
            }),
            dict({
              'num': 1,
              'role': 'lan',
            }),
            dict({
              'num': 2,
              'role': 'lan',
            }),
            dict({
              'num': 3,
              'role': 'lan',
            }),
            dict({
              'num': 4,
              'role': 'lan',
            }),
            dict({
              'device': 'eth1',
              'need_tag': False,
              'num': 0,
              'want_untag': True,
            }),
            dict({
              'num': 5,
              'role': 'wan',
            }),
          ]),
          'reset': True,
          'roles': list([
            dict({
              'device': 'eth0',
              'ports': '1 2 3 4 0',
              'role': 'lan',
            }),
            dict({
              'device': 'eth1',
              'ports': '5 0',
              'role': 'wan',
            }),
          ]),
        }),
      }),
      'usb_jack': '/usb3/3-1/',
    }),
    'features': dict({
      'ipv6': True,
    }),
    'mnfinfo': dict({
      'batch': '0001',
      'blver': '3.0',
      'hwver': '0202',
      'mac': 'AABBCCDDEE01',
      'macEth': 'AABBCCDDEE02',
      'name': 'RUTX50_TEST_001',
      'serial': '1234567890',
    }),
    'static': dict({
      'board_name': 'teltonika,rutx',
      'cpu_count': 4,
      'device_name': 'RUTX50',
      'fw_build_date': '2025-09-04 14:49:05',
      'fw_version': 'RUTX_R_00.07.17.3',
      'hostname': 'RUTX50',
      'kernel': '6.6.96',
      'model': 'RUTX50',
      'release': dict({
        'description': 'OpenWrt 21.02.0 r16279-5cc0535800',
        'distribution': 'OpenWrt',
        'revision': 'r16279-5cc0535800',
        'target': 'ipq40xx/generic',
        'version': '21.02.0',
      }),
      'system': 'ARMv7 Processor rev 5 (v7l)',
    }),
  })
# ---
